# Paper-Processer

./: .gitignore  LICENSE  README.md  pyproject.toml  research-flow.config.example.json
docs/: SETUP.md
examples/: annotated_analysis.json  annotated_paper.json  metadata_only.json  sparse_annotations.json
research_flow/: __init__.py  agents.py  cli.py  config.py  deepseek_client.py  gemini_client.py  gui.py  io_utils.py  llm_client.py  models.py  obsidian.py  openai_client.py  pdf_metadata.py  pipeline.py  prompting.py  rendering.py  schemas.py  text_extraction.py  webapp.py  zotero_api.py
tests/: test_workflow.py
